# LGF

./: .gitignore  CITATION.cff  LICENSE  README.md  audit_lgf_direction.md  audit_report.md  build_overleaf_package.py  environment_rankb.yml  fix_plan.md  inspect_splits.py  pyproject.toml  requirements.txt  requirements_no_torch.txt  verify_splits.py
audit_artifacts/: README.md
configs/: README.md  b0_resnet18_ce_tongji_s1s2.yaml  b0_resnet18_ce_tongji_subject_disjoint_s1s2_seed2026.yaml  b0_resnet18_ce_tongji_subject_disjoint_s1s2_seed2705.yaml  b0_resnet18_ce_tongji_subject_disjoint_s1s2_seed42.yaml  b0_resnet18_ce_tongji_subject_disjoint_s2s1_seed2026.yaml  b0_resnet18_ce_tongji_subject_disjoint_s2s1_seed2705.yaml  b0_resnet18_ce_tongji_subject_disjoint_s2s1_seed42.yaml  b1_resnet18_ce_supcon_iitd_subject_disjoint_within_seed2026.yaml  b1_resnet18_ce_supcon_iitd_subject_disjoint_within_seed2705.yaml  b1_resnet18_ce_supcon_iitd_subject_disjoint_within_seed42.yaml  b1_resnet18_ce_supcon_iitd_within_lr1e4.yaml  b1_resnet18_ce_supcon_tongji_s1s2.yaml  b1_resnet18_ce_supcon_tongji_s1s2_lr1e4_seed2705.yaml  b1_resnet18_ce_supcon_tongji_subject_disjoint_s1s2_seed2026.yaml  b1_resnet18_ce_supcon_tongji_subject_disjoint_s1s2_seed2705.yaml  b1_resnet18_ce_supcon_tongji_subject_disjoint_s1s2_seed42.yaml  b1_resnet18_ce_supcon_tongji_subject_disjoint_s2s1_seed2026.yaml  b1_resnet18_ce_supcon_tongji_subject_disjoint_s2s1_seed2705.yaml  b1_resnet18_ce_supcon_tongji_subject_disjoint_s2s1_seed42.yaml  b2_fixed_gabor_resnet18_iitd_within_lr1e4.yaml  (+46 more)
docs/: architecture.md  (+7 more)
(+474 files in other folders)
