[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "palmrec"
version = "0.1.0"
description = "Faithful reproduction of Palmprint Features Fusion Recognition Based on Conformer and Gabor"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
    "opencv-python",
    "Pillow",
    "PyYAML",
    "tqdm",
    "joblib",
    "pytest",
    "matplotlib"
]

[tool.setuptools]
packages = ["palmrec"]
