[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protocol-sensitive-palmprint-recognition"
version = "0.1.0"
description = "Audit-supported evaluation of recognition heads and losses for cross-session palmprint recognition."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
    "opencv-python",
    "Pillow",
    "PyYAML",
    "tqdm",
    "joblib",
    "pytest",
    "matplotlib"
]

[tool.setuptools]
[tool.setuptools.packages.find]
include = ["palmrec*"]
exclude = ["palmrec.legacy*"]
